Apply spring-boot-tomcat module

--- a/src/test/resources/config/application.properties
+++ b/src/test/resources/config/application.properties
@@ -9,3 +9,5 @@ spring.main.banner-mode=off
 # Logging configuration
 logging.level.org.play.wsi=OFF
 logging.config=classpath:logback.xml
+
+server.port=0
